...
    func registercells(){
        collectionView.registerReusableViewCell(ImageCollectionCell.self)
        collectionView.registerReusableViewCell(ActivityIndicatorCell.self)
    }
    
    func setUpView(){
        searchBar.placeholder = NSLocalizedString("placeholder_search", comment: "Search")
        searchBar.becomeFirstResponder()
        collectionView.isHidden = true
        activityIndicator.isHidden = true
        infoLabel.isHidden = true
        retryButton.isHidden = true
    }
...
